--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,21 @@ section.language-chips {
 span.chip {
     border-radius: 3px;
     padding: 4.5px;
+    position: relative;
+}
+
+span.chip.lost::before {
+    content: "ded";
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    font-size: 0.85rem;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 section.word {
@@ -95,6 +110,14 @@ section.keyboard > button {
     border: 1px solid #d7d7d7;
     border-radius: 3px;
     cursor: pointer;
+}
+
+section.keyboard > button.correct {
+    background-color: #10a95b;
+}
+
+section.keyboard > button.wrong {
+    background-color: #ec5d49;
 }
 
 button.new-game {
