--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ section.game-status {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     color: #f9f4da;
     width: 100%;
     max-width: 350px;
@@ -53,9 +54,20 @@ section.game-status.lost {
     background-color: #ba2a2a;
 }
 
+section.game-status.farewell {
+    background-color: #7a5ea7;
+    border: 1px dashed #323232;
+}
+
 section.game-status > p {
     margin: 5px;
 }
+
+section.game-status > p.farewell-message {
+    font-style: italic;
+    font-weight: 400;
+}
+
 section.game-status > h2 {
     font-size: 1.25rem;
     margin: 5px;
@@ -76,8 +88,9 @@ span.chip {
     position: relative;
 }
 
+/* Dimmed overlay with skull on "lost" languages */
 span.chip.lost::before {
-    content: "ded";
+    content: "💀";
     position: absolute;
     display: flex;
     align-items: center;
@@ -132,6 +145,11 @@ section.keyboard > button.correct {
 
 section.keyboard > button.wrong {
     background-color: #ec5d49;
+}
+
+section.keyboard > button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 
 button.new-game {
